# capacitor-rul-prediction

./: eda.ipynb  eda2.ipynb  main.py  pyproject.toml
eda_kiro/: .gitignore  GITHUB_SETUP.md  README.md  pyproject.toml  pytest.ini  warning_analysis.py  warning_config.yaml
eda_kiro/data/raw/: .gitkeep
eda_kiro/docs/: es12_data_structure_guide.md  real_data_analysis_guide.md  warning_management_guide.md
eda_kiro/examples/: rul_analyzer_demo.py  usage_examples.py
eda_kiro/output/: checkpoint_25_summary.md
eda_kiro/output/actual_waveforms/: ES12C4_cycle_100_actual_report.md  ES12C4_cycle_1_actual_report.md  ES12C4_cycle_200_actual_report.md  ES12C4_cycle_300_actual_report.md
eda_kiro/output/dynamic_input_cycles/: ES12C4_dynamic_cycles_analysis.md
eda_kiro/output/individual_degradation/: degradation_analysis_report.md
eda_kiro/output/large_gap_similar_vl_dissimilar_vo/: ES12C4_large_gap_similar_vl_dissimilar_vo_report.md  SUMMARY.md
eda_kiro/output/normalized_response/: ES12C4_normalized_report.md
eda_kiro/output/optimal_degradation/: ES12C4_optimal_pairs_report.md
eda_kiro/output/real_data_demo/: real_data_analysis_report.html
eda_kiro/output/response_degradation/: ES12C4_response_report.md
eda_kiro/output/similar_input_cycles/: ES12C4_similarity_report.md
eda_kiro/output/similar_input_response/: ES12C4_response_analysis_report.md
eda_kiro/output/single_cycle_waveforms/: ES12C4_cycle_100_report.md  ES12C4_cycle_1_report.md  ES12C4_cycle_200_report.md  ES12C4_cycle_300_report.md
eda_kiro/rul_modeling/: .gitignore  GETTING_STARTED.md  NEXT_STEPS.md  PROJECT_SETUP_SUMMARY.md  README.md  TASK_1.1_COMPLETE.md  pyproject.toml  test_parallel_extraction.py  test_parallel_extractor.py
eda_kiro/rul_modeling/docs/: FINAL_PROJECT_REPORT.md  confusion_matrix_explanation_ja.md  degradation_based_labeling_summary.md  enhanced_inference_completion_summary.md  es10_es14_structure_analysis.md  false_positive_reduction_strategies.md  (+27 more)
eda_kiro/scripts/: analyze_cycle1_and_find_similar.py  analyze_es12_structure.py  debug_es12_data.py  demo_real_data_analysis.py  demo_warning_management.py  detailed_es12_analysis.py  download_dataset.py  explore_waveform_patterns.py  extract_similar_cycles_analysis.py  find_dynamic_input_cycles.py  find_similar_input_cycles.py  find_truly_identical_vl_with_vo_analysis.py  find_visually_identical_vl_cycles.py  test_es12_integration.py  test_es12_loader.py  visualize_actual_waveform.py  visualize_best_identical_vl_pairs.py  visualize_degradation.py  visualize_individual_degradation.py  visualize_normalized_response.py  visualize_optimal_degradation_comparison.py  visualize_response_degradation.py  visualize_similar_input_response.py  visualize_similar_vl_dissimilar_vo.py  visualize_single_cycle_waveform.py  visualize_true_similar_input_degradation.py
(+243 files in other folders)
