[project]
name = "nasa-pcoe-eda"
version = "0.1.0"
description = "Exploratory Data Analysis system for NASA PCOE Dataset Repository No.12"
authors = [
    {name = "Data Science Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "japanize-matplotlib>=1.1.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "h5py>=3.8.0",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.82.0",
    "mypy>=1.4.0",
    "ruff>=0.0.280",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.scripts]
nasa-pcoe-eda = "nasa_pcoe_eda.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "hypothesis>=6.148.5",
    "pytest>=9.0.1",
]
